[tool.usort]

first_party_detection = false

[tool.black]

line-length = 120
target-version = ["py38"]

[tool.ufmt]

excludes = [
    "gallery",
]

dependencies = [
  "torch = { git = 'https://github.com/pytorch/pytorch.git', branch = 'nightly' }"
]

[build-system]

requires = ["setuptools", "wheel", "torch"]
